<!--
  ~ Copyright (C) 2019
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining
  ~ a copy of this software and associated documentation files (the
  ~ "Software"), to deal in the Software without restriction, including
  ~ without limitation the rights to use, copy, modify, merge, publish,
  ~ distribute, sublicense, and/or sell copies of the Software, and to
  ~ permit persons to whom the Software is furnished to do so, subject to
  ~ the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be
  ~ included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  ~ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
  ~ BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
  ~ ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources>
  <string name="app_name">Pasbox</string>

  <string name="cancel">Cancel</string>

  <string name="install">Install</string>
  <string name="update">Update</string>

  <string name="insecure_device">We\'ve detected that your device is not secure. Pasbox can\'t guarantee the safety of
    your passwords stored on this device and you will not be able to use our online services. You may use Pasbox only
    on this device if you wish.</string>

  <string name="missing_google_play_services">Google Play Services are not installed on this device. Pasbox needs them
    to guarantee the safety of your passwords. You will not be able to use our online services, but you may continue
    using Pasbox only on this device.</string>

  <string name="old_google_play_services">Your device has an old version of Google Play Services. Pasbox requires the
    latest version of Google Play Services to guarantee the safety of your passwords. You will not be able to use our
    online services until you update Google Play Services. You may continue to use Pasbox only on this device.</string>

  <string name="updating_google_play_services">Your device is updating Google Play Services and until that has finished
    you\'ll have limited options to use Pasbox.</string>

  <string name="setup_keyguard">Secure Device</string>
  <string name="keyguard_not_setup">Your device is not secured by PIN/Pattern/Password/Fingerprint. Although you can
    continue to use Pasbox, we strongly recommend you secure your device.</string>

  <string name="setup_fingerprint">Setup Fingerprint</string>
  <string name="fingerprint_not_setup">Your device supports fingerprinting, so we suggest you set it up. This will make
    it much harder for anyone to impersonate you.</string>

  <string name="password_title">Title</string>
  <string name="password_title_helper_text">Website, Username, Email, …</string>
  <string name="password_features">Features</string>
  <string name="password_feature_multicase">AbC</string>
  <string name="password_feature_digits">123</string>
  <string name="password_feature_specials">#!@</string>
  <string name="password_size">Size</string>
  <string name="password_size_short">Short</string>
  <string name="password_size_normal">Normal</string>
  <string name="password_size_huge">Huge</string>
  <string name="password_value">Password</string>
  <string name="password_touch_to_save">Touch to save</string>
  <string name="password_saving">Saving…</string>
  <string name="password_saved">Saved!</string>
  <string name="password_save_failed">Save failed, touch to try again</string>
  <string name="create_password_keyguard_title">Save Password</string>
  <string name="create_password_keyguard_description">Enter your device PIN, password, pattern or fingerprint to save your new password securely.</string>
  <string name="open_password_keyguard_title">Open Password</string>
  <string name="open_password_keyguard_description">Enter your device PIN, password, pattern or fingerprint to securely open your password.</string>
  <string name="password_saving_failed_keyguard">Uh-oh. Touch to try again</string>
  <string name="password_enter_title_to_save">Enter a title…</string>
  <string name="password_enter_password_to_save">Enter password…</string>
  <string name="password_website">Website</string>
  <string name="password_username_email">Username / Email</string>
  <string name="password_touch_to_open">Touch to open</string>
  <string name="password_opening">Opening…</string>
  <string name="password_opening_failed_keyguard">Uh-oh. Touch to try again</string>
  <string name="password_will_close">Password will close in %d seconds…</string>
  <string name="account_new_setup_in_progress">Your device is preparing your Pasbox account…</string>
  <string name="setup_master_password_explanation">You\'ll need to wait about %s minutes every time you use your master password, and on devices with %.1f%s of memory or more. Your device may slow down and get hot temporarily.</string>
  <string name="setup_master_password_touch_to_begin">Touch to begin, swipe to cancel</string>
  <string name="security">Security</string>
  <string name="password_size_custom">Custom</string>
  <string name="setup_master_password_advice">We advise you to setup a master password in order to enable backups and the online Pasbox service.</string>
  <string name="setup_master_password">Setup master password</string>
  <string name="master_password">Master password</string>
  <string name="length">Length</string>
  <string name="setup_master_password_keyguard_title">Setup Pasbox Master Password</string>
  <string name="setup_master_password_keyguard_description">Enter your device PIN / Pattern / Password / Fingerprint to setup your Pasbox master password.</string>

  <string name="setup_master_password_measuring_performance_1">Measuring the device\'s performance…</string>
  <string name="setup_master_password_measuring_performance_2">This may take up to a minute…</string>
  <string name="setup_master_password_securing_1">Securing your password, this will take a while…</string>
  <string name="setup_master_password_securing_2">Your device may become hot and other apps slow…</string>
  <string name="setup_master_password_securing_3">If you leave the app this process will be cancelled…</string>
  <string name="setup_master_password_finishing_up">Finishing up…</string>
  <string name="create_secret_password">Password</string>
  <string name="create_secret_otp">2FA (OTP)</string>
  <string name="create_secret_other">Other</string>
  <string
    name="create_otp_keyguard_description">Provide your fingerprint, PIN, pattern or password to save the OTP.</string>
  <string name="create_otp_keyguard_title">Save OTP</string>

  <string name="touch_to_open">Touch to open</string>
  <string name="touch_to_save">Touch to save</string>
  <string name="save_failed">Uh-oh, saving failed</string>
  <string name="save_success">Saved!</string>
  <string name="open_failed">Uh-oh, opening failed</string>
  <string name="open_success">Opened!</string>
</resources>
