<?xml version="1.0" encoding="utf-8"?>
<me.stojan.pasbox.ui.UICreateOTP
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  >

  <me.stojan.pasbox.ui.WidthSquareFrameLayout
    android:id="@+id/scan_container"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@android:color/black"
    >

  </me.stojan.pasbox.ui.WidthSquareFrameLayout>

  <LinearLayout
    android:id="@+id/value_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    >

    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/title_layout"
      android:layout_marginTop="@dimen/marginVerticalHalf"
      android:layout_marginBottom="@dimen/marginVerticalHalf"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:helperTextEnabled="true"
      app:boxStrokeWidth="3dp"
      >

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title"
        android:singleLine="true"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/secret_layout"
      android:layout_marginTop="@dimen/marginVerticalHalf"
      android:layout_marginBottom="@dimen/marginVerticalHalf"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:helperTextEnabled="true"
      app:boxStrokeWidth="3dp"
      >

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/secret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Secret"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:imeActionLabel="Save"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/otp_layout"
      android:layout_marginTop="@dimen/marginVerticalHalf"
      android:layout_marginBottom="@dimen/marginVerticalHalf"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:helperTextEnabled="true"
      app:boxStrokeWidth="3dp"
      >

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="2FA (OTP) Code"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:imeActionLabel="Save"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <me.stojan.pasbox.ui.KeyguardButton
      android:id="@+id/save"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/marginVerticalHalf"
      android:paddingBottom="@dimen/marginVerticalHalf"
      app:title="@string/create_otp_keyguard_title"
      app:description="@string/create_otp_keyguard_description"
      app:initial="@string/touch_to_save"
      app:success="@string/save_success"
      app:failure="@string/save_failed"
      >

      <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        />

      <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        />

    </me.stojan.pasbox.ui.KeyguardButton>

  </LinearLayout>

</me.stojan.pasbox.ui.UICreateOTP>