<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining
  ~ a copy of this software and associated documentation files (the
  ~ "Software"), to deal in the Software without restriction, including
  ~ without limitation the rights to use, copy, modify, merge, publish,
  ~ distribute, sublicense, and/or sell copies of the Software, and to
  ~ permit persons to whom the Software is furnished to do so, subject to
  ~ the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be
  ~ included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  ~ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
  ~ BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
  ~ ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<me.stojan.pasbox.ui.UISecretPassword
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  >

  <com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/marginVerticalHalf"
    android:layout_marginBottom="@dimen/marginVerticalHalf"
    android:layout_marginLeft="@dimen/marginHorizontal"
    android:layout_marginRight="@dimen/marginHorizontal"
    app:cardElevation="@dimen/cardElevationNormal"
    app:cardMaxElevation="@dimen/cardElevationModal"
    >

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

      <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/cardPaddingHorizontal"
        android:paddingRight="@dimen/cardPaddingHorizontal"
        android:paddingTop="@dimen/cardPaddingVertical"
        android:paddingBottom="@dimen/cardPaddingVertical"
        />

      <LinearLayout
        android:id="@+id/opened"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/cardPaddingHorizontal"
        android:paddingRight="@dimen/cardPaddingHorizontal"
        android:paddingBottom="@dimen/cardPaddingVertical"
        >

        <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:helperTextEnabled="true"
          app:boxStrokeWidth="3dp"
          >

          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_value"
            android:singleLine="true"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
        </com.google.android.material.textfield.TextInputLayout>
      </LinearLayout>

      <LinearLayout
        android:id="@+id/to_open"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <me.stojan.pasbox.ui.KeyguardButton
          android:id="@+id/open"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/cardPaddingVertical"
          android:paddingBottom="@dimen/cardPaddingVertical"
          android:paddingLeft="@dimen/cardPaddingHorizontal"
          android:paddingRight="@dimen/cardPaddingHorizontal"
          app:title="@string/open_password_keyguard_title"
          app:description="@string/open_password_keyguard_description"
          app:initial="@string/touch_to_open"
          app:success="@string/open_success"
          app:failure="@string/open_failed"
          android:clickable="true"
          android:focusable="true"
          android:background="?android:attr/selectableItemBackground"
          >

          <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="@dimen/marginVertical"
            android:paddingBottom="@dimen/marginVertical"
            />

          <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="@dimen/marginVertical"
            android:paddingBottom="@dimen/marginVertical"
            />

        </me.stojan.pasbox.ui.KeyguardButton>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/closed"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/cardPaddingHorizontal"
        android:paddingRight="@dimen/cardPaddingHorizontal"
        />


    </LinearLayout>

  </com.google.android.material.card.MaterialCardView>


</me.stojan.pasbox.ui.UISecretPassword>